--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1><b>Fábio Lima</b></h1>
     <a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
     <p></p><a href="https://github.com/Fabiosdl">GitHub</a></p>
+    <p><a href="https://fabiosdl.github.io/my-resume/">My Resume</a></p> 
     <p><em>Higher Diploma in Software Development and Bachelor in Civil Engineering</em></p>
     <p>I am a former civil engineer with over a decade of experience, 
         and I have recently chosen to pivot my career toward becoming
@@ -42,10 +43,10 @@
     <hr>
     <h3><strong>My Hobbies</strong></h3>
     <ol>
-        <li>Playing Guitar</li>        
+        <li>Spending Time With Family</li>        
         <li>Outdoor Activities</li>
-        <li>Cooking and Drinking Coffee</li>      
-        
+        <li>Cooking and Drinking Coffee</li>
+        <li>Playing Guitar</li>        
     </ol>
 </body>
 </html>
