change of profile photo and About me section

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     <a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
     <p></p><a href="https://github.com/Fabiosdl">GitHub</a></p>
     <p><a href="https://fabiosdl.github.io/my-resume/">My Resume</a></p> 
-    <p><em>Higher Diploma in Software Development and Bachelor in Civil Engineering</em></p>
-    <p>I am a former civil engineer with over a decade of experience, 
-        and I have recently chosen to pivot my career toward becoming
-         a Software Developer. I recently graduate in Higher Diploma 
-         in Software Development at Maynooth University, with First Class honors. 
-         As I transition into this dynamic and rewarding field, I am both 
-         enthusiastic and eager to apply my skills and knowledge in the job market, 
-         making a meaningful contribution to the ever-evolving world of technology.</p>
-    <hr> <!-- horizontal ruel -->
+    <p><em>Higher Diploma in Software Development and Bachelor Degree in Civil Engineering</em></p>
+    <p>I am a highly motivated software developer with a background both in software development and civil
+        engineering, bringing strong problem-solving skills and a passion for technology. After transitioning to
+        software development, I’ve quickly adapted and applied my technical expertise to create user-friendly
+        solutions to complex challenges. I have experience working in diverse industries, from civil engineering to
+        software development, and I thrive in collaborative team environments. Known for being diligent,
+        flexible, and proactive, I’m always eager to innovate and contribute to meaningful projects.</p>
+    <hr>
     <h3><strong>Education</strong></h3>
     <ul>
         <li><strong>Higher Diploma in Science (Computer Science - Software Development)</strong>
