--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Fabio's Personal Website</title>
+    <link rel="stylesheet" href="\style\style.css">
 </head>
 <body>
-    <img src=".\picture\fabio_profile.jpeg"
-        width = "200"
-        height = "auto"/>
+    <img src=".\picture\fabio_profile.jpg"/>
         
     <h1><b>Fábio Lima</b></h1>
     <a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
