--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul>
         <li><strong>Higher Diploma in Science (Computer Science - Software Development)</strong>
             <br/>            
-            Maynooth University, Maynooth, Co. Kildare.
+            Maynooth University, Ireland.
             <br/>
             Completion date 30/05/2023 
             <br/>
