--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="\style\style.css">
 </head>
 <body>
-    <img src="picture/fabio_profile.jpg" alt="Fabio Profile">
+    <img src="./picture/fabio_profile.jpg" alt="Fabio Profile">
 
     <h1><b>Fábio Lima</b></h1>
     <a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
