--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabio's Personal Website</title>
     <link rel="stylesheet" href="\style\style.css">
 </head>
 <body>
-    <img src="./picture/fabio_profile.jpg" alt="Fabio Profile">
-
+<img
+        src="./picture/fabio_profile.jpg"
+        alt="Fabio Profile"
+        class="profile-image"
+/>
     <h1><b>Fábio Lima</b></h1>
     <a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
     <p></p><a href="https://github.com/Fabiosdl">GitHub</a></p>
