--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabio's Personal Website</title>
-    <link rel="stylesheet" href="\style\style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 <img
-        src="./picture/fabio_profile.jpg"
+        src="picture/fabio_profile.jpg"
         alt="Fabio Profile"
         class="profile-image"
 />
