--- a/index.html
+++ b/index.html
@@ -13,44 +13,50 @@
         alt="Fabio Profile"
         class="profile-image"
 />
-    <h1><b>Fábio Lima</b></h1>
-    <a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
-    <p></p><a href="https://github.com/Fabiosdl">GitHub</a></p>
-    <p><a href="https://fabiosdl.github.io/my-resume/">My Resume</a></p> 
-    <p><em>Higher Diploma in Software Development and Bachelor Degree in Civil Engineering</em></p>
-    <p>I am a highly motivated software developer with a background both in software development and civil
-        engineering, bringing strong problem-solving skills and a passion for technology. After transitioning to
-        software development, I’ve quickly adapted and applied my technical expertise to create user-friendly
-        solutions to complex challenges. I have experience working in diverse industries, from civil engineering to
-        software development, and I thrive in collaborative team environments. Known for being diligent,
-        flexible, and proactive, I’m always eager to innovate and contribute to meaningful projects.</p>
-    <hr>
-    <h3><strong>Education</strong></h3>
-    <ul>
-        <li><strong>Higher Diploma in Science (Computer Science - Software Development)</strong>
-            <br/>            
-            Maynooth University, Ireland.
-            <br/>
-            Completion date 30/05/2023 
-            <br/>
-            Result: First Class Honors
-        </li>
+<h1><b>Fábio Lima</b></h1>
+<a href="https://www.linkedin.com/in/fabiosoaresdelima/">LinkedIn</a>
+<p></p><a href="https://github.com/Fabiosdl">GitHub</a></p>
+<p><a href="https://fabiosdl.github.io/my-resume/">My Resume</a></p>
+<h2><p><b><em>Backend Software Developer (Spring Boot) with a Background in Civil Engineering</em></b></p></h2>
+<p> After starting my career as a civil engineer, I discovered my passion for problem-solving in the tech world and
+    transitioned into software development. Over the past year, I’ve specialized in backend development, primarily using
+    Spring Boot to create powerful, scalable, and efficient applications. My engineering background has given me a
+    structured, analytical approach to development, enabling me to design systems that are not only reliable but also
+    optimized for performance.</p>
+
+ <p> With a focus on building robust APIs and managing complex data flows, I’m skilled at creating solutions that drive
+    seamless user experiences behind the scenes. I thrive on solving complex technical challenges and delivering
+    high-quality code that meets business needs. My unique combination of technical expertise and practical project
+    management experience allows me to collaborate effectively with cross-functional teams and deliver results on time.
+     </p>
+
+  <p> If you’re looking for a backend developer with a strong foundation in engineering principles and a passion for
+    building scalable, efficient systems, let’s <a href="https://www.linkedin.com/in/fabiosoaresdelima/">connect</a></p>
+<hr>
+<h3><strong>Education</strong></h3>
+<ul>
+    <li><strong>Higher Diploma in Science (Computer Science - Software Development)</strong>
         <br/>
-        <li><strong>BEng Civil Engineering;</strong>
-            <br/>
-            State University of Rio de Janeiro (UERJ)
-            <br/>
-            Result: 2.1 Grade
-        </li>
-    </ul>
-    <hr>
-    <h3><strong>My Hobbies</strong></h3>
-    <ol>
-        <li>Spending Time With Family</li>        
-        <li>Outdoor Activities</li>
-        <li>Cooking and Drinking Coffee</li>
-        <li>Playing Guitar</li>        
-    </ol>
+        Maynooth University, Ireland.
+        <br/>
+        Result: First Class Honors
+    </li>
+    <br/>
+    <li><strong>BEng Civil Engineering;</strong>
+        <br/>
+        State University of Rio de Janeiro (UERJ)
+        <br/>
+        Result: 2.1 Grade
+    </li>
+</ul>
+<hr>
+<h3><strong>My Hobbies</strong></h3>
+<ol>
+    <li>Spending Time With Family</li>
+    <li>Outdoor Activities</li>
+    <li>Cooking and Drinking Coffee</li>
+    <li>Playing Guitar</li>
+</ol>
 </body>
 </html>
 
